<resources>
    <string name="app_name">Drinking Games</string>
    <string name="games_menu_title">KeithApps\' Drinking Games</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="text_circleofdeath">Circle of Death</string>
    <string name="text_ridethebus">Ride The Bus</string>
    <string name="text_resetallcards">Reset all cards</string>
    <string name="circleofdeath_carddirection_ace">Waterfall</string>
    <string name="circleofdeath_carddirection_two">You</string>
    <string name="circleofdeath_carddirection_three">Me</string>
    <string name="circleofdeath_carddirection_four">Floor</string>
    <string name="circleofdeath_carddirection_five">Guys</string>
    <string name="circleofdeath_carddirection_six">Chicks</string>
    <string name="circleofdeath_carddirection_seven">Heaven</string>
    <string name="circleofdeath_carddirection_eight">Make a Date</string>
    <string name="circleofdeath_carddirection_nine">Rhyme</string>
    <string name="circleofdeath_carddirection_ten">Categories</string>
    <string name="circleofdeath_carddirection_jack">Never Have I Ever</string>
    <string name="circleofdeath_carddirection_queen">Question Master</string>
    <string name="circleofdeath_carddirection_king">Make a Rule</string>
    <string name="circleofdeath_carddirection_description_ace">Everyone begins drinking and each person cannot stop until the person to their left stops, however the person who drew this card may stop whenever they want</string>
    <string name="circleofdeath_carddirection_description_two">The person who drew this card picks someone else to drink</string>
    <string name="circleofdeath_carddirection_description_three">The person who drew this card must drink</string>
    <string name="circleofdeath_carddirection_description_four">Everyone points to the floor, the last person to do so must drink</string>
    <string name="circleofdeath_carddirection_description_five">All guys drink</string>
    <string name="circleofdeath_carddirection_description_six">All chicks drink</string>
    <string name="circleofdeath_carddirection_description_seven">Everyone points to the ceiling, the last person to do so must drink</string>
    <string name="circleofdeath_carddirection_description_eight">Pick a person, and from now on, whenever you drink, they drink</string>
    <string name="circleofdeath_carddirection_description_nine">Pick a word and go in a circle and rhyme a word with it. The first person who cannot must drink</string>
    <string name="circleofdeath_carddirection_description_ten">Pick a category and go in a circle and name something that fits in that category. The first person who cannot do so must drink</string>
    <string name="circleofdeath_carddirection_description_jack">Come on, you know what "Never Have I Ever" is.</string>
    <string name="circleofdeath_carddirection_description_queen">Until the next queen is drawn, you are the Question Master. If you ask anyone a question and they answer it, they must drink</string>
    <string name="circleofdeath_carddirection_description_king">Make a rule that must be obeyed until the end of the game</string>
    <string name="circleofdeath_circlebrokenmessage">You broke the circle!</string>
    <string name="circleofdeath_circlebrokenmessage_2">Drink the beer in the middle of the table</string>
    <string name="text_moretocome">More Games Coming Soon!</string>
    <string name="ridethebus_question_color">What color is this card?</string>
    <string name="ridethebus_question_highlow">Is this card higher or lower than the last one?</string>
    <string name="ridethebus_question_inout">Is this card inside or outside of the last two?</string>
    <string name="ridethebus_question_suit">What suit is this card?</string>
    <string name="text_black">Black</string>
    <string name="text_red">Red</string>
    <string name="text_higher">Higher</string>
    <string name="text_lower">Lower</string>
    <string name="text_inside">Inside</string>
    <string name="text_outside">Outside</string>
    <string name="text_youwon">You Won!</string>
    <string name="text_restart">Restart</string>
    <string name="ridethebus_warning_aceislow">Note: Aces are always low</string>
    <string name="ridethebus_incorrectmessage">"No, the card was the "</string>
    <string name="text_takeadrink">Take a drink!</string>
    <string name="text_settings">Settings</string>
    <string name="text_save">Save</string>
    <string name="text_acesalwayslow">Aces Always Low</string>
    <string name="setting_acesalwayslow">AcesAlwaysLow</string>
    <string name="ridethebus_warning_aceishigh">Note: Aces are always high</string>
    <string name="text_package">mobile.keithapps.drinkinggames</string>
    <string name="text_exceptionlogname">keithapps.drikinggames</string>
    <string name="text_bizkit">Bizkit</string>
    <string name="text_rolldice">Roll Dice</string>
    <string name="bizkit_welcometext">Welcome to Bizkit! To start, everyone sit in a circle and roll the die, then move clockwise, until someone rolls a 7!</string>
    <string name="bizkit_message_youarebizkit">You are now the Bizkit! What is your name?</string>
    <string name="bizkit_message_sum_7">All players put a thumb on their forehead and say Bizkit.\n\nLast player to do so drinks and becomes the new Bizkit.</string>
    <string name="bizkit_message_sum_9">The person to the right of the roller drinks.</string>
    <string name="bizkit_message_sum_10">The roller drinks.</string>
    <string name="bizkit_message_sum_11">The person to the left of the roller drinks.</string>
    <string name="bizkit_message_sum_3">Challenge someone else!\nThe game will then decide who won when you press \'Challenge Accepted\'</string>
    <string name="bizkit_message_message_dispensedrink">Now go clockwise and roll the dice, and perform action that is associated!</string>
    <string name="bizkit_message_nocurrentbizkit">Current Bizkit: None</string>
    <string name="text_actionname_andcolon">Action Name:</string>
    <string name="text_action_andcolon">Action:</string>
    <string name="text_ace">Ace</string>
    <string name="text_two">Two</string>
    <string name="text_three">Three</string>
    <string name="text_four">Four</string>
    <string name="text_five">Five</string>
    <string name="text_six">Six</string>
    <string name="text_seven">Seven</string>
    <string name="text_eight">Eight</string>
    <string name="text_nine">Nine</string>
    <string name="text_ten">Ten</string>
    <string name="text_jack">Jack</string>
    <string name="text_queen">Queen</string>
    <string name="text_king">King</string>
    <string name="settings_cod_ace_actionname_key">settings.circleofdeath.ace.actionname.key</string>
    <string name="settings_cod_ace_actiontext_key">settings.circleofdeath.ace.actiontext.key</string>
    <string name="settings_cod_two_actionname_key">settings.circleofdeath.two.actionname.key</string>
    <string name="settings_cod_two_actiontext_key">settings.circleofdeath.two.actiontext.key</string>
    <string name="settings_cod_three_actionname_key">settings.circleofdeath.three.actionname.key</string>
    <string name="settings_cod_three_actiontext_key">settings.circleofdeath.three.actiontext.key</string>
    <string name="settings_cod_four_actionname_key">settings.circleofdeath.four.actionname.key</string>
    <string name="settings_cod_four_actiontext_key">settings.circleofdeath.four.actiontext.key</string>
    <string name="settings_cod_five_actionname_key">settings.circleofdeath.five.actionname.key</string>
    <string name="settings_cod_five_actiontext_key">settings.circleofdeath.five.actiontext.key</string>
    <string name="settings_cod_six_actionname_key">settings.circleofdeath.six.actionname.key</string>
    <string name="settings_cod_six_actiontext_key">settings.circleofdeath.six.actiontext.key</string>
    <string name="settings_cod_seven_actionname_key">settings.circleofdeath.seven.actionname.key</string>
    <string name="settings_cod_seven_actiontext_key">settings.circleofdeath.seven.actiontext.key</string>
    <string name="settings_cod_eight_actionname_key">settings.circleofdeath.eight.actionname.key</string>
    <string name="settings_cod_eight_actiontext_key">settings.circleofdeath.eight.actiontext.key</string>
    <string name="settings_cod_nine_actionname_key">settings.circleofdeath.nine.actionname.key</string>
    <string name="settings_cod_nine_actiontext_key">settings.circleofdeath.nine.actiontext.key</string>
    <string name="settings_cod_ten_actionname_key">settings.circleofdeath.ten.actionname.key</string>
    <string name="settings_cod_ten_actiontext_key">settings.circleofdeath.ten.actiontext.key</string>
    <string name="settings_cod_jack_actionname_key">settings.circleofdeath.jack.actionname.key</string>
    <string name="settings_cod_jack_actiontext_key">settings.circleofdeath.jack.actiontext.key</string>
    <string name="settings_cod_queen_actionname_key">settings.circleofdeath.queen.actionname.key</string>
    <string name="settings_cod_queen_actiontext_key">settings.circleofdeath.queen.actiontext.key</string>
    <string name="settings_cod_king_actionname_key">settings.circleofdeath.king.actionname.key</string>
    <string name="settings_cod_king_actiontext_key">settings.circleofdeath.king.actiontext.key</string>
    <string name="text_resetalltodefault">Reset all to Default</string>
    <string name="settings_text_information">     //Created by Keith MacKay\n\n     //Feedback: keith.mackay3@gmail.com</string>
    <string name="text_alwaysinsultthebizkit">Constantly insult the Bizkit</string>
    <string name="settings_bizkit_insultbizkit">settings.bizkit.insultbizkit</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_general">General</string>
    <string name="text_cardskin">Card Skin</string>
    <string name="settings_cardskin">settings.cardskin</string>

    <string-array name="insults">
        <item>what an asshole</item>
        <item>that dick</item>
        <item>such a jerk</item>
        <item>that moron</item>
        <item>Ha. Loser.</item>
    </string-array>
</resources>
