<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".GamesMenu">
    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/ten_sp" />

            <Button
                android:id="@+id/codButton_gamesMenuScreen"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttonbackground_allsides"
                android:onClick="openCOD"
                android:text="@string/text_circleofdeath"
                android:textAllCaps="false"
                android:textColor="@color/darkRed"
                android:textSize="50sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/ten_sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttonbackground_allsides"
                android:onClick="openRTB"
                android:text="@string/text_ridethebus"
                android:textAllCaps="false"
                android:textColor="@color/darkRed"
                android:textSize="50sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/ten_sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:background="@drawable/buttonbackground_allsides"
                android:text="@string/text_moretocome"
                android:textAllCaps="false"
                android:textColor="@color/darkRed"
                android:textSize="40sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/ten_sp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
