<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_bizkit_youarebizkit_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/twenty_five" />

    <RelativeLayout
        android:id="@+id/popup_bizkit_diecontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/popup_bizkit_leftdie"
                android:layout_width="@dimen/one_hundred"
                android:layout_height="@dimen/one_hundred"
                android:src="@drawable/die1_1" />

            <View
                android:layout_width="@dimen/fifty"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/popup_bizkit_rightdie"
                android:layout_width="@dimen/one_hundred"
                android:layout_height="@dimen/one_hundred"
                android:src="@drawable/die1_1" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/twenty_five" />

    <TextView
        android:id="@+id/popup_bizkit_messagetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/twenty"
        android:paddingStart="@dimen/twenty"
        android:text="@string/bizkit_message_youarebizkit"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/twenty_five" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/thirty" />

    <LinearLayout
        android:id="@+id/popup_bizkit_youarebizkit_edittext_container"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/seventy_five"
        android:orientation="horizontal"
        android:visibility="gone">

        <View
            android:layout_width="@dimen/twenty"
            android:layout_height="fill_parent" />

        <RelativeLayout
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="8">

            <EditText
                android:id="@+id/popup_bizkit_youarebizkit_edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/thirty"
                android:layout_centerInParent="true"
                android:background="@color/lightGray"
                android:inputType="textPersonName"
                android:paddingEnd="@dimen/twenty_five"
                android:paddingStart="@dimen/twenty_five"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/twenty" />
        </RelativeLayout>

        <View
            android:layout_width="@dimen/twenty"
            android:layout_height="fill_parent" />

        <RadioGroup
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/three">

            <RadioButton
                android:id="@+id/popup_bizkit_youarebizkit_combobox_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/text_male"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/popup_bizkit_youarebizkit_combobox_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_female"
                android:textColor="@color/white" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/popup_bizkit_youarebizkit_popupbottomtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/twenty_five"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/twenty"
        android:visibility="gone" />
</LinearLayout>